fixed the visibility in dark mode

--- a/style.css
+++ b/style.css
@@ -45,9 +45,9 @@ body {
     border-radius: 2rem; 
     background-color: white;
 }
-/* Specific overrides for Dark Mode */
+
 [data-theme='dark'] .bg-white {
-    background-color: #1d232a !important; /* DaisyUI neutral dark */
+    background-color: #1d232a !important; 
     color: #f8fafc !important;
 }
 
@@ -65,7 +65,16 @@ body {
     color: white !important;
 }
 
-/* Ensure card titles are visible in dark mode */
 [data-theme='dark'] .card-github h2 {
     color: white !important;
+}
+[data-theme='dark'] .text-base-content {
+    color: #f8fafc !important;
+}
+
+[data-theme='dark'] .bg-base-200 {
+    background-color: #191e24 !important; 
+}
+[data-theme='dark'] #dynamic-text {
+    color: rgba(255, 255, 255, 0.5) !important;
 }
